--- a/templates/dummy.html
+++ b/templates/dummy.html
@@ -23,7 +23,9 @@
          <a href="{% url 'home' %}" class="nav-link">Home Page</a>
           
          
-            {% if user.is_authenticated %}
+          {% if user.is_authenticated %}
+          <a href="{% url 'display_profile' %}" class="nav-link">display_profile</a>
+          <a href="{% url 'change_password' %}" class="nav-link">change_password</a>
           <a href="{% url 'user_logout' %}" class="nav-link">user_logout</a>
           {% else %}
           <a href="{% url 'user_login' %}" class="nav-link">user_login</a>
